cluster/resources/authelia/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: core-auth
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.data-monster.net`)
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls: {}
